[workspace]
resolver = "2"
members = [
  "crates/openrpc-core",
  "crates/openrpc-proxy",
  "crates/openrpc-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["OpenRPC Contributors"]
repository = "https://github.com/openrpc/openrpc"

[workspace.dependencies]
openrpc-core = { path = "crates/openrpc-core" }
openrpc-proxy = { path = "crates/openrpc-proxy" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.8" }
rusqlite = { version = "0.33", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
